# HYDRE

./: .gitignore  README.md  pyproject.toml
PARE/: main.py  train_wiki20m.sh
PARE/encoder/: passage_encoder.py
PARE/framework/: data_loader.py  passage_re.py
ablations/: ret_give_bag_both_random.py  ret_give_bag_not_pare.py  ret_give_bag_not_sent_sim.py  ret_single_from_bag_random_scores.py
datasets/nyt10m/: eng_Latn_final.jsonl
scripts/: download_nyt10m.py  infer_api.py  infer_local.py  pare_pred_candidates.py  ret_give_bag_eng.py  ret_single_from_bag_eng.py
