[project]
name = "hydre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "fire>=0.7.1",
    "jinja2>=3.1.6",
    "jsonlines>=4.0.0",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "protobuf>=6.33.6",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.4.0",
    "wandb>=0.25.1",
]
